--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,7 +1,7 @@
 <h1>My tasks</h1>
 
 <% @tasks.each do |task| %>
-    <p> <%= task.completed %> | <b> <%= link_to task.title, task_path(task) %> </b></p>
+    <p> <%= task.completed %> | <b> <%= link_to task.title, task_path(task) %> </b> <%= link_to 'Delete', destroy_path(task), method: :delete, data: { confirm: 'Are you sure you want to delete this task?' } %></p>
 <% end %>
 
 <%= link_to 'Create new task', tasks_new_path%>
